@@ -42,7 +42,6 @@ void xfsm_place_trash_window (GtkWindow *window,
                               gint       monitor);
 
 /* XXX - move to libxfce4util? */
-gchar **xfsm_strv_copy (gchar **v);
 gboolean xfsm_strv_equal (gchar **a, gchar **b);
 
 void xfsm_window_add_border (GtkWindow *window);
