@@ -2,7 +2,8 @@
 
 	* xfce4-session/xfsm-chooser.c: Use xfce_create_mixed_button()
 	  instead of xfsm_imgbtn_new() (bug 1446).
-	* libxfsm/xfsm-utils.[ch]: Remove xfsm_imgbtn_new().
+	* libxfsm/xfsm-utils.[ch]: Remove xfsm_imgbtn_new() and
+	  xfsm_strv_copy().
 
 2008-10-17	Brian Tarricone <bjt23@cornell.edu>
 
